--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.2.0
+  firebase_database: ^9.0.6
+  firebase_core : ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - images/lamp.jpg
+    - images/light-on.png
+    - images/light-off.png
+    - images/power.jpg
+    - images/connected.png
+    - images/power2.png
+    - images/background.jpg
+    - images/lightred.png
+
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
